[package]
name = "sinex"
version = "0.2.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to parse and analyze SINEX data"
homepage = "https://github.com/georust/rinex/sinex"
repository = "https://github.com/georust/rinex/sinex"
keywords = ["sinex", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"

[features]

[build-dependencies]

[dependencies]
chrono = "0.4"
thiserror = "1"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
gnss-rs = { path = "../gnss-rs", version = "=1", features = ["serde"] }
rinex = { path = "../rinex", version = "=0.14.1", features = ["serde"] }
