[package]
name = "sp3"
version = "1.1.0-alpha-1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "IGS SP3 file parser"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
documentation = "https://docs.rs/sp3/"
keywords = ["gnss", "timing", "igs"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"

[features]
default = ["flate2", "anise", "qc", "processing"] # gzip files by default

# File Merging and other high level methods
qc = [
    "rinex-qc-traits",
]

# (Pre)Processing methods like data masking 
processing = [
    "qc",
    "rinex-qc-traits/processing",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]

[dependencies]
thiserror = "1"
itertools = "0.13.0"
hifitime = "4.0.0"
gnss-rs = { version = "2.3.1", features = ["serde"] }
anise = { version = "0.5.2", optional = true }
rinex-qc-traits = { path = "../qc-traits", version = "=0.2", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
flate2 = { version = "1.0.24", optional = true, default-features = false, features = ["zlib"] }

[dev-dependencies]
