[package]
name = "sp3"
version = "1.1.0-alpha-2"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "IGS SP3 file parser"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
documentation = "https://docs.rs/sp3/"
keywords = ["gnss", "timing", "igs"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"

[features]
default = ["flate2"] # gzip files by default

# File Merging and other high level methods
qc = [
    "gnss-qc-traits",
]

# (Pre)Processing methods like data masking 
processing = [
    "qc",
    "gnss-qc-traits/processing",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
thiserror = "2"
hifitime = "4.0"
itertools = "0.14"
anise = { version = "0.5.3", optional = true }
gnss-rs = { version = "2.3.2", features = ["serde"] }
gnss-qc-traits = { version = "0.0.2", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
flate2 = { version = "1.0.35", optional = true, default-features = false, features = ["zlib"] }
