[package]
name = "ublox-rnx"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Efficient RINEX production from a Ublox GNSS receiver"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "gps", "glonass", "galileo", "timing"]
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serialport = "4.2.0"
ublox = "0.4.4"
rinex = { path = "../rinex", features = ["serde"] }
clap = { version = "3.2.22", features = ["yaml"] }
