[package]
name = "ublox-rnx"
version = "0.1.3"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Efficient RINEX production from a Ublox GNSS receiver"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "gps", "glonass", "galileo", "timing"]
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4.30"
serde = "1.0"
thiserror = "1"
serde_json = "1.0"
serialport = "4.2.0"
ublox = "0.4.4"
clap = { version = "4.4.10", features = ["derive", "color"] }
gnss-rs = { version = "2.1.2", features = ["serde"] }
rinex = { path = "../rinex", version = "=0.15.1", features = ["serde", "nav", "obs"] }
